720 이상 다운받을 수 있게 수정

--- a/docs/05-사용자-가이드.md
+++ b/docs/05-사용자-가이드.md
@@ -10,6 +10,7 @@
 
 ### 요구사항
 - Python 3.13 이상
+- **FFmpeg** (자동 설치됨, 시스템에 설치된 경우 우선 사용)
 
 ### 설치 방법
 
@@ -25,8 +26,29 @@ cd YoutubeDownloaderCli
 pip install .
 ```
 
+
+### FFmpeg 설치 (선택사항)
+`youtubedownloadercli`는 필요한 경우 자동으로 FFmpeg를 다운로드하여 사용합니다. 하지만 시스템 전역에서 사용하거나 특정 버전을 원하신다면 직접 설치할 수도 있습니다.
+고화질 다운로드(1080p 이상)나 포맷 변환을 위해서는 FFmpeg가 필요합니다.
+
+**Windows:**
+1. [FFmpeg 공식 홈페이지](https://ffmpeg.org/download.html)에서 Windows 빌드 다운로드
+2. 압축 해제 후 `bin` 폴더 경로를 시스템 환경변수 PATH에 추가
+3. 또는 `winget` 사용: `winget install 'FFmpeg (Essentials)'`
+
+**macOS:**
+```bash
+brew install ffmpeg
+```
+
+**Linux:**
+```bash
+sudo apt install ffmpeg
+```
+
 ### 설치 확인
 ```bash
+ffmpeg -version
 ytdl --version
 ```
 
@@ -266,6 +288,11 @@ ytdl download https://www.youtube.com/watch?v=video3
 # macOS/Linux
 sudo ytdl download <URL>
 ```
+
+### "ffmpeg is not installed" 에러
+- **원인**: FFmpeg가 설치되어 있지 않거나 PATH에 추가되지 않음
+- **해결**: 최신 버전에서는 자동으로 FFmpeg를 감지합니다. `uv sync`를 실행하여 의존성을 업데이트해 보세요. 여전히 문제가 발생한다면 위 [FFmpeg 설치](#ffmpeg-설치-선택사항) 섹션을 참고하여 수동으로 설치하세요.
+
 
 ### 설치 오류
 ```bash
